Thu Aug 21 00:37:08 GMT 2008  Olly Betts <olly@survex.com>

	* common/debuglog.h,common/omdebug.h: Define LOGLINE, etc to no-op
	  versions when XAPIAN_DEBUG_VERBOSE isn't defined.
	* api/,backends/chert/,backends/flint/,
	  backends/inmemory/inmemory_database.cc,
	  backends/multi/multi_postlist.cc,backends/multi/multi_termlist.cc,
	  expand/esetinternal.cc,expand/expandweight.cc,matcher/,
	  net/remoteconnection.cc: Use LOGLINE or LOGVALUE instead of
	  DEBUGLINE.

Wed Aug 20 13:33:56 GMT 2008  Olly Betts <olly@survex.com>

	* common/debuglog.h: Don't need omtime.h.

Wed Aug 20 06:11:31 GMT 2008  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix to catch QueryParserError instead of const
	  char * which Xapian < 1.0.0 threw instead.

Wed Aug 20 05:50:26 GMT 2008  Olly Betts <olly@survex.com>

	* docs/valueranges.rst: Expand on some sections.

Wed Aug 20 04:43:07 GMT 2008  Olly Betts <olly@survex.com>

	* tests/api_nodb.cc: Clarify in comments that this affected 1.0.7.

Wed Aug 20 04:33:22 GMT 2008  Olly Betts <olly@survex.com>

	* api/omenquire.cc: Simplify RSet::remove_document() and
	  RSet::contains() a little.  Fix output of RSet::get_description().
	* tests/api_nodb.cc: Add regression test rset4 for
	  RSet::get_description() fix.

Wed Aug 20 02:45:04 GMT 2008  Olly Betts <olly@survex.com>

	* common/omdebug.h: Remove DebugMsg() macro which is no longer used.

Tue Aug 12 05:03:34 GMT 2008  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc,backends/flint/flint_table.h:
	  Backport elimination of find_tag() to flint.

Tue Aug 12 04:10:41 GMT 2008  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc,backends/chert/chert_table.h:
	  ChertTable::find_tag() is only used by ChertTable::get_exact_entry()
	  so remove the former folding its code into the latter.

Mon Aug 11 03:06:10 GMT 2008  Olly Betts <olly@survex.com>

	* backends/chert/chert_spelling.h,backends/chert/chert_synonym.h: